<resources>
    <string name="app_name">BleDemo</string>
    <string name="positive">确定</string>
    <string name="negative">取消</string>
    <string name="notifytitle">提示</string>
    <string name="GPSNotigyMessage">需打开定位功能扫描蓝牙设备。</string>
    <string name="setting">前往设置</string>
    <string name="unconnect_ble">可用设备：</string>
    <string name="connect_ble">已连接设备：</string>
    <string name="seekble">搜索蓝牙设备</string>
    <string name="stopseekble">停止搜索设备</string>
    <string name="openble">打开</string>
    <string name="closeble">关闭</string>
    <string name="ble">蓝牙</string>
    <string name="connect">连接</string>
    <string name="unconnect">断开</string>
    <string name="navsetting">设置</string>
    <string name="senderr">报错</string>
    <string name="worktype">工作模式：</string>
    <string name="locationinfo">定位信息：</string>
    <string name="latitude">纬      度：</string>
    <string name="longitude">经      度：</string>
    <string name="altitude">高      程：</string>
    <string name="fixmode">定位状态：</string>
    <string name="satnum">卫星数量：</string>
    <string name="hdop">HDOP值：</string>
    <string name="netmode">网络模式：</string>
    <string name="rssi">详细信息：</string>
    <string name="netlink">网络状态：</string>
    <string name="nettriplink">服务状态:</string>
    <string name="ntrip">入网信息：</string>
    <string name="ntripmode">Ntrip模式：</string>
    <string name="host">Host地址：</string>
    <string name="port">端口号：</string>
    <string name="mount">挂载点：</string>
    <string name="user">用户名：</string>
    <string name="pwd">密 码：</string>
    <string name="productId">产品ID：</string>
    <string name="workstatus">工作状态</string>
    <string name="net">网络信息：</string>
    <string name="setdata">设置数据</string>
    <string name="ip">有线网IP：</string>
    <string name="dialogpositive">知道了</string>
    <string name="dialogtips">蓝牙已断开连接，请重新建立连接。</string>
    <string name="vendor">运营商:</string>
</resources>
