<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">



  <LinearLayout
      android:id="@+id/ll1"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      app:layout_constraintStart_toStartOf="parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_ble"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <ImageButton
          android:id="@+id/ib_back"
          android:layout_width="wrap_content"
          android:layout_height="match_parent" />

      <TextView
          android:id="@+id/tv_seekble"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="查找蓝牙设备"/>

    </android.support.v7.widget.Toolbar>


    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

      <TextView
          android:id="@+id/tv_ble"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignBaseline="@+id/bt_openble"
          android:gravity="center_horizontal|center_vertical|center"
          android:text="@string/ble" />

      <Button
          android:id="@+id/bt_openble"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentRight="true"
          android:text="@string/openble" />
    </RelativeLayout>

    <Button
        android:id="@+id/bt_seekble"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/seekble" />

    <TextView
        android:id="@+id/tv_connected_ble"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connect_ble"
        tools:ignore="HardcodedText" />

    <ListView
        android:id="@+id/lv_connected_ble"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="0.5dp"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        >

    </ListView>

    <!--  <Button
               android:id="@+id/bt_ble"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="Hello World!"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintLeft_toLeftOf="parent"
               app:layout_constraintRight_toRightOf="parent"
               app:layout_constraintTop_toTopOf="parent" />-->

    <TextView
        android:id="@+id/tv_unconnect_ble"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unconnect_ble" />

    <ListView
        android:id="@+id/lv_unconnect_ble"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="0.5dp"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        />


  </LinearLayout>


</android.support.constraint.ConstraintLayout>